# kali

./: .env.example  .gitignore  Dockerfile  README.md  bot.py  example.env  main.py  pyproject.toml  requirements.txt  ruff.toml
data/: stickers.py
handlers/: __init__.py  chitchat.py
kali/: bot.py  config.py  confug_loguru.py  main.py
kali/handlers/: ban.py  chitchat.py  ping.py
kali/rules/: text.py
rules/: text.py
